crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_v_html_resolves_ctx_and_v_for_aliases.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { child as _child, renderEffect as _renderEffect, createFor as _createFor, template as _template } from 'vue';
const t0 = _template("<div><div></div></div>")
export function render(_ctx) {
const n0 = _createFor(() => (_ctx.diagnostics), (_for_item0) => {
const n2 = t0()
const n3 = _child(n2)
_renderEffect(() => {
n3.innerHTML = _ctx.formatHelp(_for_item0.value.help)
})
return n2
})
return n0
}
