crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_v_if.snap
---
source: crates/vize_atelier_vapor/src/lib.rs
expression: code.as_str()
---
import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>visible</div>", true)
export function render(_ctx) {
const n0 = _createIf(() => (_ctx.show), () => {
const n2 = t0()
return n2
})
return n0
}
