crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_v_memo_empty_array_lowers_without_runtime_directives.snap
---
source: crates/vize_atelier_vapor/src/lib.rs
assertion_line: 1014
expression: code.as_str()
---
import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, template as _template } from 'vue';
const t0 = _template("<div> </div>", true)
export function render(_ctx) {
const n0 = t0()
const x0 = _txt(n0)
_setText(x0, _toDisplayString(_ctx.msg))
return n0
}
